--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body{
     grid-template-columns: repeat(12,1fr);
 /*    grid-gap: 10px; */
     grid-template-rows: repeat(12,1fr);
+    width: 100vw;
+    height: 100vh;
 }
 
 header{
@@ -27,7 +29,10 @@ nav{
 main{
     grid-column: 4/13;
     grid-row: 2/11;
+    max-height: 100vh; 
+    overflow:auto;
     background: yellow;
+    z-index: 1;
 }
 footer{
     grid-column: 1/13;
@@ -49,11 +54,12 @@ footer{
 /*        grid-gap: 10px; */
         grid-template-columns: repeat(12,1fr);   
         grid-template-rows: repeat(12,1fr);
+    
     }
     header{
         grid-column: 1/13;
         grid-row: 1/2;
-    }
+    }   
     nav{
         grid-column: 1/13;
         grid-row: 2/3;
@@ -61,6 +67,8 @@ footer{
     main{
         grid-column: 1/13;
         grid-row: 3/11;
+        max-height: 100vh;
+        overflow: scroll;
     }
     footer{
         grid-column: 1/13;
